# django_abrasileirado

./: .pre-commit-config.yaml  LICENSE.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: qa.yml
django_abrasileirado/: apps.py
django_abrasileirado/migrations/: __init__.py
docs/: conf.py  contribute.rst  getting-started.rst  index.rst  modules.rst
